exports[`test renders a final chapter text without crashing 1`] = `
<div>
  <div
    className="container-markdown">
    <h2
      className="book-markdown">
      Chapter 1
    </h2>
    <p
      className="book-markdown">
      This is a chapter.
    </p>
  </div>
</div>
`;

exports[`test renders a normal chapter text without crashing 1`] = `
<div>
  <div
    className="container-markdown">
    <h2
      className="book-markdown">
      Chapter 1
    </h2>
    <p
      className="book-markdown">
      This is a chapter.
    </p>
  </div>
  <a
    className="next-chapter"
    href="/book/0/2"
    onClick={[Function]}>
    Siguiente Capitulo
  </a>
</div>
`;

exports[`test renders a progress wheel if there is no page data 1`] = `
<div
  className="loader"
  style={Object {}} />
`;
